# luasyslog

./: .gitignore  COPYING  Makefile  Makefile.am  README  README.md  autogen.sh  compat-5.3.h  config.h.in  configure.ac  example.lua  lsyslog.c  luasyslog.rockspec.in  syslog.lua  test.lua  test.lua.in
